added styling for title, subtitle, body, form. added hr

--- a/index.html
+++ b/index.html
@@ -11,19 +11,18 @@
       <div class="title">
         Forgot your password?
       </div>
-
+      <hr>
       <div class="subtitle">
-        __
-      </div>
-      <div class="body">
         Enter your email address to reset your password
       </div>
+      <div class="body">
+        EMAIL
+        <form class="emailForm" method="POST" action="">
+          <input class="emailField" type="email" name="email" placeholder="Enter your email address">
+          <input class="loginButton" type="submit" value="Submit">
+        </form>
+      </div>
 
-      <form class="emailForm" method="POST" action="">
-        <label for="email">Email: </label>
-        <input class= "emailField" type="email" name="email" placeholder="Enter your email address">
-        <input class="loginButton" type="submit" value="Submit">
-      </form>
 
     </div>
   </body>
