--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
       </div>
       <div class="body">
         EMAIL
+      </div>
+      <div class ="form">
         <form class="emailForm" method="POST" action="">
           <input class="emailField" type="email" name="email" placeholder="Enter your email address">
-          <input class="loginButton" type="submit" value="Submit">
+          <input class="submitButton" type="submit" value="Submit">
         </form>
       </div>
-
-
     </div>
   </body>
 </html>
