added basic email verification and flash alert

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,9 @@
   <head>
     <title>FED Challenge Template</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-    <link rel="stylesheet" href="/public/styles.css" />
+    <link rel="stylesheet" href="/public/styles/styles.css" />
+    <script type="text/javascript" src="/public/vendor/jquery-2.2.3.min.js"></script>
+    <script type="text/javascript" src="/public/scripts/app.js"></script>
   </head>
 
   <body>
